# sonors

./: .gitignore  1.js  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
js/: index.js
lib/complex/: Cargo.toml  complex.rs  lib.rs
lib/fft/: Cargo.toml  fft.rs  lib.rs
src/: lib.rs  main.rs  microphone.rs
static/: index.html  style.css
