[package]
name = "sonors"
version = "0.1.0"
authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
    "lib/fft",
    "lib/complex",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7"
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"
wee_alloc = { version = "0.4.2", optional = true }
fft = { path = "lib/fft" }
complex = { path = "lib/complex" }

[dependencies.web-sys]
version = "0.3"
features = ["console", "CanvasRenderingContext2d", "ImageData", "Document", "Element", "HtmlCanvasElement", "Window"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
portaudio = "0.7"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
