[package]
name = "complex"
version = "0.1.0"
authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "complex"
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3"
rand = "0.7"
